--- a/page2.html
+++ b/page2.html
@@ -56,18 +56,18 @@
             <div class="container-fluid">
                 <nav>
                     <a class="brand" href="#">
-                        <center><img src="img2/Picture1.png"></center>
+                        <center><img src="https://i.ibb.co/0MQkxWm/Picture1.png"></center>
                     </a>
                     <ul style="font-family: 'Open Sans', sans-serif; ">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">About us</a></li>
                         <li><a href="#">Events</a></li>
                         <li><a href="#">Blog</a></li>
                         <li><a href="#">Team</a></li>
                         <li><a href="#">Updates</a></li>
                     
                         <li><a href="#">FAQ</a></li>
-                        <li><a href="#">contact us</a></li>
+                        <li><a href="#">Contact us</a></li>
                     </ul>
                 </nav>
             </div>
